@@ -8,7 +8,7 @@ DIST mplayer-uau-1.0_rc4_p20110126.tar.xz 7298200 RMD160 483d9fbebd3fbba9377c698
 EBUILD mplayer-uau-1.0_rc4_p20100822.ebuild 23583 RMD160 2d0df508d912e7587fe61b816e2ab418f89ea32a SHA1 d7d057ca95276e370de18e61767033922dc559f8 SHA256 a884674e4da716f691ca1443de2e8bdcb0d4a76a7898dfe395095a4ed2c6563f
 EBUILD mplayer-uau-1.0_rc4_p20101126.ebuild 23645 RMD160 64e49ca062db2b32e82944bda06fb26b6be8c7cb SHA1 274ec552e1652eff2a01f124f74774be2042d8d1 SHA256 9952bbfedab8df63547ab0ca0a0df214fa56015297a8ade25aa53955968578dc
 EBUILD mplayer-uau-1.0_rc4_p20101220.ebuild 23441 RMD160 a098eed6bc656e1e15978aa61f5558a126e5c5f0 SHA1 41491e9796ba2d6b963de169a1ea67b1f2e8cae5 SHA256 fc0c1c31eb208d848891e6eb35847022c13b32350910018a0a8147643e73e669
-EBUILD mplayer-uau-1.0_rc4_p20110126.ebuild 23391 RMD160 7dd7cb025f62b9b6424fc7b21a69674e5b372446 SHA1 eeba36308bc089eacfdc6f49e5fead7381cb6f17 SHA256 e974a7c04a222765dae923723d2cbdd0a3eb35385446c21f884f1a611405d7ce
-EBUILD mplayer-uau-9999.ebuild 23366 RMD160 ff6836bccd17a9ff6c8020d176660eeb3b2f1f9d SHA1 df03ecd191f5d508df1a69c4747299d24919e33c SHA256 2b0691b160410c0ddb32e02f7e815b24ae4ac96a4dd5534ef09f543f64d85004
-MISC ChangeLog 1645 RMD160 842afb4298ace5743755562286939dc46a54374e SHA1 98d331d0742ae3062d14f5862828195497d0a22b SHA256 52f5ce171da58dc06a1f0736b2e70f0c058bd014540eccf732c7054645dd3bfd
+EBUILD mplayer-uau-1.0_rc4_p20110126.ebuild 23254 RMD160 db5bedfd5fb51699259668ad4c92dcbd5de8087a SHA1 3c8341d18ed310e976b4661ba50e25a35edff461 SHA256 ef49cc0be1d84eb6a77438956d43123c1c9ac1c12a019a4ed89308a1536eb9b7
+EBUILD mplayer-uau-9999.ebuild 23229 RMD160 9e01ea8ad19e930748cae4874c4dd4b9ebc528cd SHA1 d3a08cada5364d9ac4f2582bd4c8672319c43272 SHA256 32cf80650b793a2c3f652d2b5bfe33629b3322de3f2e28523b9ed1e77f8692a0
+MISC ChangeLog 1774 RMD160 6dd8a9f56f2dbebdf6333ec1360f258cf41d6c04 SHA1 b306358b9aa8422756445767a274f1eb6ac946ed SHA256 85d1d3a3f4333ad5f75f0f8a4993e25859a6ae5a6ad7200341c08e71a4b92cec
 MISC metadata.xml 4739 RMD160 e2f1220571f2fb983fa04408190449b75a346b6b SHA1 eaf3e0b5ff1b9759b6d4e7233b2f57f42e360bb6 SHA256 5c818b4e3898a2d0d5a8b833f3bab6c15bdd121a10b55c6e1a6e9f34f7e514a4
